
* We have added the predicates write_array/5 and write_array/6 to the io
  module; these predicates write arrays using a user-specified procedure
  to write the elements and separating the elements with a user-specified
  separator string.

* io.print and string_writer.print now print arbitrary precision integers
  in their decimal form instead of printing their underlying representation.

* We have added temp_directory/3, make_temp_directory/3 and
  make_temp_directory/5 predicates to the io module.

* We have added a variant of io.set_environment_var that returns an io.res
  value rather than throwing an exception. We have added the predicate
  io.have_set_environment_var/0 that tests for the ability to set
  environment variables on the current platform.

* We have removed the io.poly_type equivalence type from the io module.
  string.poly_type should be used directly.

* We have made these predicates exception safe: the current input or output
  stream is restored to the original stream if an exception is thrown during
  their execution:

    - io.read/4
    - io.write_list/6
    - io.write_array/6
    - io.read_binary/4
    - io.write_binary/4

* We have added predicates to the lexer and parser modules that read from
  an explicitly specified input stream, not from the current input stream.

* We have added a module for discrete interval encoding trees, which are a
  highly efficient set implementation for fat sets.  This module is a
  contribution from Yes Logic Pty. Ltd.

+ We have added two new modules for concurrent programming: thread.barrier
  and thread.future.  The barrier module provides a barrier type which can
  be used to control progress in concurrent code.  The future module
  provides future and future_io data types which can be used to compute
  values in parallel using other threads.  These modules were contributed by
  Mission Critical IT.

* We have added a new module, ranges, that represents sets of integers using